# JSD-Tim-2

./: MANIFEST.in  README.md  environment.md  example.ent  game.py  grammar.dot  grammar.tx  interpret_model.py  level.dot  level.py  main.py  pyproject.toml  requirements.txt  setup.cfg
components/: __init__.py  gui.py  interface.py  level_btn.py
example/: game_example.gme
game_logic/: action.py  command.py  difficulty.py  end_bonus_sequence.py  endmove.py  game.py  if_complete.py  if_points.py  loop.py  move.py  pause.py  set.py  start_bonus_sequence.py
game_logic/model/: command.py  difficulty.py  if_complete.py  if_points.py  level.py  loop.py  move.py  pause.py  set.py
game_logic/model/bonus/: base_bonus.py  default_bonus.py
game_logic/model/converter/: converter.py
imgs/: arrow-up.ppm
levels/: level1.ddr  level1.gme  level2.ddr  level2.gme  level3.ddr  level3.gme  level4.ddr  level4.gme  level5.ddr  level5.gme  level6.ddr  level6.gme
src/: main.py
src/components/: game_thread.py  gui.py
src/game/: __init__.py
src/game/components/: gui.py
src/game/game_logic/: game.py
src/game/game_logic/model/: if_complete.py  if_points.py  level.py  loop.py  (+3 more)
src/game_logic/: game.py
src/game_logic/model/: if_complete.py  if_points.py  level.py  loop.py  move.py  pause.py  set.py
src/gme/: main.py
src/gme/components/: gui.py
src/gme/game_logic/: game.py
src/gme/levels/: level1.gme  level3.gme
src/levels/: level5.gme
vscode/gamejsd/: package.json
vscode/gamejsd/snippets/: snippets.code-snippets
vscode/gamejsd/syntaxes/: gme.tmLanguage.json
(+13 files in other folders)
