[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gme"
version = "0.0.1"
license = {text = "MIT License"}
authors = ["Sara", "Ana", "Dusan", "Srdjan"]
dependencies = [
"keyboard==0.13.5",
"Pillow==10.3.0",
"pydub==0.25.1",
"pytube==15.0.0",
"sounddevice==0.4.7",
"soundfile==0.12.1",
"textx==4.0.1"
]

[tool.setuptools]
packages = { find = { where = ["src"] } }
include-package-data = true



[tool.setuptools.package-dir]
"" = "src"

[project.scripts]
gme-run="gme.main:main"