[metadata]
name = Gme
version = 0.1.0
description = College project where we implemented DSL for game level specification
license = MIT
author = Sara, Ana, Dusan, Srdjan
author_email = sara1404@gmail.com, sm.vulinana@gmail.com, JanosevicRa176@gmail.com, businessrdjan@gmail.com

[options]
py_modules = main

[options.entry_points]
console_scripts =
    gme-run = main:main